[package]
name = "image-macro"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clipboard-win = "4.0.3"
inputbot = "0.5.0"
serde = { version = "1.0.125", features = ["derive"] }
global = "0.4.3"
bincode = "1.3.3"

